--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
+    "mime-types": "^2.1.35",
+    "minio": "^8.0.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3"
